Fixed hangman game's logic
Added helper fun to solve the sync problem and refactor some code parts

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
         </div>
         <div class="row w-100 p-0 mx-0 d-none" id="thirdDiv">
             <div class="row w-100 mb-3" id="wordAndLetters">
-                <div class="col-4 offset-1 col-md-3 offset-md-2 p-0">
+                <div class="col-4 offset-1 offset-md-2 p-0">
                     <h1 class=" smaller-font">
                         The Word is
                     </h1>
                 </div>
-                <div class="col-5 col-md-5 d-flex justify-content-between p-0 mt-2 " id="letters">
+                <div class="col-6 d-flex justify-content-between p-0 mt-2 " id="letters">
                 </div>
-                <div class="btn back-btn col-1 p-0 mt-3 mx-3 h-50" id="showBtn" title="show for second">
+                <!-- <div class="btn back-btn col-1 p-0 mt-3 mx-3 h-50" id="showBtn" title="show for second">
                     Show
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-6 offset-1 col-md-5 offset-md-2 px-0 py-1">
