--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
 <body>
     <div class="container-fluid pt-3">
-        <div class="back-btn p-2 d-none" id="backBtn" title="Home">
-            <i class="fas fa-arrow-left fa-2x"></i>
+        <div class="row">
+            <div class="back-btn p-2 d-none col-1 offset-1" id="backBtn" title="Home">
+                <i class="fas fa-arrow-left fa-2x"></i>
+            </div>
+            <div class="back-btn d-none font offset-9 col-1" id="scoreBtn" title="Score" style="font-size:30px">
+                
+            </div>
         </div>
         <div class="row my-4 w-100 h-25">
             <div class="col-9 offset-1 col-md-8 offset-md-2 main text-center">
